# YFINANCE-Sort-Sift

./: README.md  YFINANCE-Sort-Sift.py  all_tickers.txt  pyproject.toml  qualified_stocks.xlsx
