[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "stock_analyzer"
version = "0.1.0"
description = "Analyzes stocks based on financial data."
dependencies = [
   "dask[distributed]",
   "numpy",
   "yfinance",
   "openpyxl",
   "pydantic",
   "tqdm",
   "modin[dask]",
   ]